welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:2: error: Missing closing brace `}' assumed here
def faireC1(c:Color){
^PatternPicture:17: error: expected class or object definition
def faireC2(c:Color){
^PatternPicture:32: error: expected class or object definition
def av(p:Int){
^PatternPicture:37: error: expected class or object definition
def carre1(c:Color){
^PatternPicture:53: error: expected class or object definition
def carre2(c:Color){
^