welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
def faireC1(c:Color){
	setCouleurBrosse(c)
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
}
def faireC2(c:Color){
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
	avance()
	gauche()
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()	
	gauche()
	avance()
	gauche()
}
def av(p:Int){
	for(x <- 1 to p){
		avance()
	}
}
def carre1(c:Color){
	faireC1(c)
	av(4)
	faireC1(c)
	recule(4)
	gauche()
	av(4)
	droite()
	faireC1(c)
	av(4)
	faireC1(c)
	recule(4)
	droite()
	av(4)
	gauche()
}
def carre2(c:Color){
	faireC2(c)
	av(4)
	faireC2(c)
	recule(4)
	gauche()
	av(4)
	droite()
	faireC2(c)
	av(4)
	faireC2(c)
	recule(4)
	droite()
	av(4)
	gauche()

override def run() {
	carre1(Color.RED)
	avance(2)
	carre2(Color.BLUE)
	gauche()
	avance(2)
	droite()
	carre1(Color.GREEN)
	recule(2)
	carre2(Color.YELLOW)
}
	